After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705964 - Crash when running 'ostree cat --repo=...'
Crash when running 'ostree cat --repo=...'
Status: RESOLVED FIXED
Product: ostree
Classification: Infrastructure
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: OSTree maintainer(s)
OSTree maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-08-14 06:59 UTC by Stef Walter
Modified: 2013-08-14 12:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix crasher when running 'ostree cat' (665 bytes, patch)
2013-08-14 07:02 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2013-08-14 06:59:10 UTC
Crash when running 'ostree cat --repo=...'

  • #0 _IO_vfprintf_internal
  • #1 __GI___vasprintf_chk
  • #2 vasprintf
    at /usr/include/bits/stdio2.h line 210
  • #3 g_vasprintf
    at gprintf.c line 314
  • #4 g_strdup_vprintf
    at gstrfuncs.c line 517
  • #5 g_logv
    at gmessages.c line 878
  • #6 g_log
  • #7 g_option_group_add_entries
    at goption.c line 2181
  • #8 g_option_context_add_main_entries
    at goption.c line 555
  • #9 ostree_builtin_cat
    at src/ostree/ot-builtin-cat.c line 69
  • #10 ostree_run
    at src/ostree/ot-main.c line 249
  • #11 main
    at src/ostree/main.c line 67

Comment 1 Stef Walter 2013-08-14 07:02:05 UTC
Created attachment 251568 [details] [review]
Fix crasher when running 'ostree cat'

Cause was a buffer read overrun.
Comment 2 Colin Walters 2013-08-14 11:29:20 UTC
Review of attachment 251568 [details] [review]:

Looks good!
Comment 3 Stef Walter 2013-08-14 12:55:19 UTC
Attachment 251568 [details] pushed as 860cc11 - Fix crasher when running 'ostree cat'