Fix crasher when running 'ostree cat'

Cause was a buffer read overrun.

https://bugzilla.gnome.org/show_bug.cgi?id=705964